<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur1"
    tools:context="com.example.amine.securityapp.audioRecording">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbars = "vertical"
        android:scrollbarStyle="insideInset">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txt"
                android:textColor="#000000"
                android:layout_marginTop="30dp"
                android:textSize="18dp"
                android:text="@string/theft_title"
                android:textStyle="bold"
                android:scrollHorizontally="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txt1"
                android:textColor="#000000"
                android:textSize="18dp"
                android:text="@string/info11"
                android:layout_marginStart="6dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/imageView5"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txt2"
                android:textColor="#000000"
                android:textSize="18dp"
                android:text="@string/info22"
                android:layout_marginStart="6dp"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/imageView5"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txt3"
                android:textColor="#000000"
                android:textSize="18dp"
                android:text="@string/info33"
                android:layout_marginStart="6dp"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/imageView5"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txt4"
                android:textColor="#000000"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/safety_title"
                android:layout_marginStart="6dp"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/imageView5"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txt5"
                android:textColor="#000000"
                android:textSize="18dp"
                android:text="@string/info55"
                android:layout_marginStart="6dp"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/imageView5"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txt6"
                android:textColor="#000000"
                android:textSize="18dp"
                android:text="@string/info66"
                android:layout_marginStart="6dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/imageView5"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                android:textSize="18dp"
                android:text="@string/info77"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/imageView5"
                android:layout_alignParentStart="true" />
        </TableLayout>
    </ScrollView>
</RelativeLayout>