<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur1"
    tools:context="com.example.amine.securityapp.FireEmergency">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/full_screen"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/main_box"
        android:id="@+id/textt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text"
            android:textColor="#000"
            android:text="@string/fire_text"
            android:textSize="15dp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textt"
        android:id="@+id/texttT">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text1"
            android:textColor="#000"
            android:text="Shake phone in the case of a fire emergency to alert nearby fire stations"
            android:textSize="15dp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/main_box"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_box_components"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">


            <RelativeLayout
                android:layout_width="@dimen/box1"
                android:layout_height="@dimen/box1"
                android:id="@+id/lesson_box">

                <ImageView
                    android:id="@+id/lessons"
                    android:text="Lessons"
                    android:textColor="#FFFFFF"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/camera1"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"
                    android:textSize="20dp"
                    android:textColor="#000"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_below="@+id/lessons"
                    android:id="@+id/textView" />

            </RelativeLayout>





            <RelativeLayout
                android:layout_width="@dimen/box1"
                android:layout_height="@dimen/box1"
                android:id="@+id/paint_box"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/game_box"
                android:layout_toRightOf="@+id/video_box">

                <ImageView
                    android:id="@+id/paint"
                    android:text="Paint"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/location"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="20dp"
                    android:textColor="#000"
                    android:layout_below="@+id/paint"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>



            <RelativeLayout
                android:layout_width="@dimen/box1"
                android:layout_height="@dimen/box1"
                android:id="@+id/game_box"
                android:layout_toRightOf="@+id/lesson_box">

                <ImageView
                    android:id="@+id/games"
                    android:text="Games"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/video1"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video"
                    android:textSize="20dp"
                    android:textColor="#000"
                    android:layout_below="@+id/games"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="@dimen/box1"
                android:layout_height="@dimen/box1"
                android:id="@+id/video_box"
                android:layout_below="@+id/lesson_box">

                <ImageView
                    android:id="@+id/videos"
                    android:text="Videos"
                    android:textColor="#FFFFFF"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/aud1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio"
                    android:textSize="20dp"
                    android:textColor="#000"
                    android:layout_below="@+id/videos"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>


        </RelativeLayout>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/all_buttons"
        android:layout_below="@+id/main_box"
        android:layout_centerHorizontal="true">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/texttt">

            <Button
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:id="@+id/texttrr"
                android:textColor="#000"
                android:text="@string/incident_btn111"
                android:textSize="13dp"
                android:textAlignment="center"
                android:background="@drawable/button_shape"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_toRightOf="@+id/texttt"
            android:id="@+id/textttt">

            <Button
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:id="@+id/texttrrr"
                android:textColor="#000"
                android:text="@string/incident_btn222"
                android:textSize="14dp"
                android:textAlignment="center"
                android:background="@drawable/button_shape"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>
