<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur1"
    tools:context="com.example.amine.securityapp.EmergencyContacts">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/full_screen"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/main_box"
        android:id="@+id/textt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text"
            android:textColor="#000"
            android:text="@string/emergency_contact_text"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/main_box"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_box_components"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">


            <RelativeLayout
                android:layout_width="@dimen/box1"
                android:layout_height="@dimen/box1"
                android:id="@+id/lesson_box">

                <ImageView
                    android:id="@+id/lessons"
                    android:text="Lessons"
                    android:textColor="#FFFFFF"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/view_contacts"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_contact"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_below="@+id/lessons"
                    android:id="@+id/textView" />

            </RelativeLayout>





            <RelativeLayout
                android:layout_width="@dimen/box1"
                android:layout_height="@dimen/box1"
                android:id="@+id/paint_box"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/game_box"
                android:layout_toRightOf="@+id/video_box">

                <ImageView
                    android:id="@+id/paint"
                    android:text="Paint"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/group_icon"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group_contacts"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:layout_below="@+id/paint"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>



            <RelativeLayout
                android:layout_width="@dimen/box1"
                android:layout_height="@dimen/box1"
                android:id="@+id/game_box"
                android:layout_toRightOf="@+id/lesson_box">

                <ImageView
                    android:id="@+id/games"
                    android:text="Games"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/add_contact"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_contacts"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:layout_below="@+id/games"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="@dimen/box1"
                android:layout_height="@dimen/box1"
                android:id="@+id/video_box"
                android:layout_below="@+id/lesson_box">

                <ImageView
                    android:id="@+id/videos"
                    android:text="Videos"
                    android:textColor="#FFFFFF"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/send_contact" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_contacts"
                    android:textSize="18dp"
                    android:layout_below="@+id/videos"
                    android:textColor="#000"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>


        </RelativeLayout>


    </RelativeLayout>



</RelativeLayout>
